syntax = "proto3";
package notification;

message Event {
  string type = 1;
  string userId = 2;
  string mood = 3;
  string timestamp = 4;
  repeated string target = 5;
}

message PublishResponse {
  bool ok = 1;
  string message = 2;
}

service NotificationService {
  rpc PublishEvent(Event) returns (PublishResponse);
}
